Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7759

umount hanging in modern distros when OST is unavailable

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.9.0
    • Lustre 2.8.0, Lustre 2.9.0
    • 3
    • 9223372036854775807

      It looks like modern distros: SLES12, Fedora 21+ (possibly earlier) always do statfs on the mountpoint before issuing the umount call.

      In case one of the OSTs is not available at that time - the statfs will hang.

      In our tests there's a bunch of tests in conf-sanity that have this problem and it was "dealt with" in LU-5472 by just adding the -f umount option.
      But this still leaves palces like recovery-single test 89 and something in recovery-small at the very least.

      And most of all regular users would be affected too. So I wonder if we should deal with this issue somewhat more intelligently so that the unmount does not really hang in such a case?

            ys Yang Sheng
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved: