LU-7759 utils: build mount.lustre with libmount

Newer distro, like RHEL7, SLES12 will invoke statfs when
umount. It will block while some OST unavailable. So we
write a entry in utab file to avoid invoke statfs() before
issuing the unmount call.

Signed-off-by: Yang Sheng <yang.sheng@intel.com>
Change-Id: I3930ac3454a568908f0872f4a0d83ab264742f3c
Reviewed-on: http://review.whamcloud.com/18820
Tested-by: Jenkins
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Bob Glossman <bob.glossman@intel.com>