config/lustre-build.m4
@@ -117,6 +117,25 @@ AC_SUBST(LIBCFS_SUBDIR)
 ]) # LB_LIBCFS_DIR
 
 #
+# LB_LIBMOUNT
+#
+# Check whether build with libmount for mount.lustre.
+# libmount is part of the util-linux since v2.18.
+# We need it to manipulate utab file.
+#
+AC_DEFUN([LB_LIBMOUNT], [
+AC_MSG_CHECKING([whether build with libmount])
+AC_CHECK_HEADER([libmount/libmount.h], [
+	AC_CHECK_LIB([mount], [mnt_update_set_fs], [
+		LDLIBMOUNT="-lmount"
+		AC_SUBST(LDLIBMOUNT)
+		AC_DEFINE(HAVE_LIBMOUNT, 1, [build with libmount])
+  		AC_MSG_RESULT(yes)
+	],[AC_MSG_RESULT(no)])
+], [AC_MSG_RESULT(no)])
+]) # LB_LIBMOUNT
+
+#
 # LB_PATH_SNMP
 #
 # check for in-tree snmp support
@@ -546,6 +565,7 @@ m4_ifdef([LC_NODEMAP_PROC_DEBUG], [LC_NODEMAP_PROC_DEBUG])
 LIBCFS_CONFIG_CDEBUG
 LC_QUOTA
 
+LB_LIBMOUNT
 LB_PATH_SNMP
 LB_PATH_LUSTREIOKIT
 
